--- a/.github/workflows/actions-timeline-test.yml
+++ b/.github/workflows/actions-timeline-test.yml
@@ -29,7 +29,7 @@ jobs:
 
   test-job1:
     runs-on: ubuntu-latest
-
+    needs: test-actions-timeline
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -37,6 +37,5 @@ jobs:
       - name: Run Job 1 Command
         run: |
           echo "This is Job 1 command."
-          sleep 3
+          asleep 3
           echo "Job 1 completed successfully."
-          
