--- a/.github/workflows/actions-timeline-test.yml
+++ b/.github/workflows/actions-timeline-test.yml
@@ -20,6 +20,11 @@ jobs:
           sleep 5
           echo "Command completed successfully."
 
+      - name: Run Another Command
+        run: |
+          echo "This is another command."
+          #asleep 2
+
       - name: Loop Command
         run: |
           for i in {1..10}; do
@@ -37,5 +42,5 @@ jobs:
       - name: Run Job 1 Command
         run: |
           echo "This is Job 1 command."
-          asleep 3
+          sleep 3
           echo "Job 1 completed successfully."
