--- a/.github/workflows/actions-timeline-test.yml
+++ b/.github/workflows/actions-timeline-test.yml
@@ -4,13 +4,10 @@ on:
   push:
 
 jobs:
-  test-actions-timeline:
+  test-job1:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Run Actions Timeline
-        uses: Kesin11/actions-timeline@v2
-
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -32,9 +29,9 @@ jobs:
             sleep 1
           done
 
-  test-job1:
+  test-job2:
     runs-on: ubuntu-latest
-    needs: test-actions-timeline
+    needs: test-job1
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -44,3 +41,9 @@ jobs:
           echo "This is Job 1 command."
           sleep 3
           echo "Job 1 completed successfully."
+
+  actions-timeline:
+    runs-on: ubuntu-latest
+    needs: [test-job1, test-job2]
+    steps:
+      - uses: Kesin11/actions-timeline@v2
