--- a/.github/workflows/actions-timeline-test.yml
+++ b/.github/workflows/actions-timeline-test.yml
@@ -4,6 +4,12 @@ on:
   push:
 
 jobs:
+  actions-timeline:
+    runs-on: ubuntu-latest
+    needs: [test-job1, test-job2]
+    steps:
+      - uses: Kesin11/actions-timeline@v2
+
   test-job1:
     runs-on: ubuntu-latest
 
@@ -20,7 +26,7 @@ jobs:
       - name: Run Another Command
         run: |
           echo "This is another command."
-          #asleep 2
+          asleep 2
 
       - name: Loop Command
         run: |
@@ -42,8 +48,8 @@ jobs:
           sleep 3
           echo "Job 1 completed successfully."
 
-  actions-timeline:
-    runs-on: ubuntu-latest
-    needs: [test-job1, test-job2]
-    steps:
-      - uses: Kesin11/actions-timeline@v2
+  #actions-timeline:
+  #  runs-on: ubuntu-latest
+  #  needs: [test-job1, test-job2]
+  #  steps:
+  #    - uses: Kesin11/actions-timeline@v2
