--- a/.github/workflows/actions-timeline-test.yml
+++ b/.github/workflows/actions-timeline-test.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   actions-timeline:
     runs-on: ubuntu-latest
-    needs: [test-job1, test-job2]
+    #needs: [test-job1, test-job2]
     steps:
       - uses: Kesin11/actions-timeline@v2
 
