--- a/.github/workflows/actions-timeline-test.yml
+++ b/.github/workflows/actions-timeline-test.yml
@@ -4,11 +4,11 @@ on:
   push:
 
 jobs:
-  actions-timeline:
-    runs-on: ubuntu-latest
+  #actions-timeline:
+  #  runs-on: ubuntu-latest
     #needs: [test-job1, test-job2]
-    steps:
-      - uses: Kesin11/actions-timeline@v2
+  #  steps:
+  #    - uses: Kesin11/actions-timeline@v2
 
   test-job1:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
       - name: Run Another Command
         run: |
           echo "This is another command."
-          asleep 2
+          sleep 2
 
       - name: Loop Command
         run: |
@@ -48,8 +48,9 @@ jobs:
           sleep 3
           echo "Job 1 completed successfully."
 
-  #actions-timeline:
-  #  runs-on: ubuntu-latest
+  actions-timeline:
+    runs-on: ubuntu-latest
   #  needs: [test-job1, test-job2]
-  #  steps:
-  #    - uses: Kesin11/actions-timeline@v2
+    needs: test-job2
+    steps:
+      - uses: Kesin11/actions-timeline@v2
