--- a/.github/workflows/actions-timeline-test.yml
+++ b/.github/workflows/actions-timeline-test.yml
@@ -12,7 +12,7 @@ jobs:
 
   test-job1:
     runs-on: ubuntu-latest
-
+    needs: actions-timeline
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
